[gd_scene load_steps=15 format=2]

[ext_resource path="res://menu_screen/assets/Starbasesnow_0.png" type="Texture" id=1]
[ext_resource path="res://menu_screen/settings/GoBackButton.gd" type="Script" id=2]
[ext_resource path="res://menu_screen/MYTheme.theme" type="Theme" id=3]
[ext_resource path="res://menu_screen/Fonts/Equinox Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://menu_screen/settings/assets/fx_test_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://menu_screen/settings/MusicVolumeCtrl.gd" type="Script" id=6]
[ext_resource path="res://menu_screen/settings/SoundFXVolumeCtrl.gd" type="Script" id=7]
[ext_resource path="res://game_screen/large_asteroid/assets/music_Rolling-theme.wav" type="AudioStream" id=8]
[ext_resource path="res://menu_screen/settings/Options.gd" type="Script" id=9]
[ext_resource path="res://menu_screen/settings/DifficultyCtrl.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="Backgrnd" type="Sprite" parent="."]
position = Vector2( 513, 300 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="WdigetBackgrnd" type="ColorRect" parent="."]
margin_left = 363.0
margin_top = 180.0
margin_right = 655.0
margin_bottom = 487.0
color = Color( 0.247059, 0.262745, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsLbl" type="Label" parent="."]
margin_left = 445.449
margin_top = 76.6173
margin_right = 567.449
margin_bottom = 101.617
theme = ExtResource( 3 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 443.0
margin_top = 500.0
margin_right = 557.0
margin_bottom = 525.0
theme = ExtResource( 3 )
text = "go back"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeCtrl" type="Control" parent="."]
margin_left = 370.636
margin_top = 460.0
margin_right = 670.636
margin_bottom = 510.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="MusicVolumeCtrl"]
margin_right = 276.0
margin_bottom = 16.0
theme = ExtResource( 3 )
max_value = 1.0
step = 0.005
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusLbl" type="Label" parent="MusicVolumeCtrl"]
margin_top = -20.0
margin_right = 22.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "-
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusLbl" type="Label" parent="MusicVolumeCtrl"]
margin_left = 268.0
margin_top = -20.0
margin_right = 278.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "+
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLbl" type="Label" parent="MusicVolumeCtrl"]
margin_left = 115.0
margin_top = -20.0
margin_right = 168.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 1 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTestVolumeSnd" type="AudioStreamPlayer" parent="MusicVolumeCtrl"]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="SoundFXVolumeCtrl" type="Control" parent="."]
margin_left = 370.636
margin_top = 400.0
margin_right = 670.636
margin_bottom = 450.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FXSlider" type="HSlider" parent="SoundFXVolumeCtrl"]
margin_right = 276.0
margin_bottom = 16.0
theme = ExtResource( 3 )
max_value = 1.0
step = 0.005
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusLbl" type="Label" parent="SoundFXVolumeCtrl"]
margin_top = -20.0
margin_right = 22.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "-
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusLbl" type="Label" parent="SoundFXVolumeCtrl"]
margin_left = 268.0
margin_top = -20.0
margin_right = 278.0
margin_bottom = 33.0
theme = ExtResource( 3 )
text = "+
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundFXLbl" type="Label" parent="SoundFXVolumeCtrl"]
margin_left = 70.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 1 )
text = "Sound effects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FXTestVolumeSnd" type="AudioStreamPlayer" parent="SoundFXVolumeCtrl"]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="DifficultyCtrl" type="Control" parent="."]
margin_left = 370.0
margin_top = 330.0
margin_right = 550.0
margin_bottom = 360.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiffSlider" type="HSlider" parent="DifficultyCtrl"]
margin_left = 20.0
margin_right = 250.0
margin_bottom = 16.0
min_value = -4.0
max_value = -1.0
value = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLbl" type="Label" parent="DifficultyCtrl"]
margin_left = 100.0
margin_top = -20.0
margin_right = 189.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
text = "difficulty"

[node name="NightmareLbl" type="Label" parent="DifficultyCtrl"]
margin_left = 190.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "nightmare"

[node name="EasyLbl" type="Label" parent="DifficultyCtrl"]
margin_top = 20.0
margin_right = 89.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "easy"

[node name="Options" type="Control" parent="."]
margin_left = 377.0
margin_top = 200.0
margin_right = 643.0
margin_bottom = 267.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLbl" type="Label" parent="Options"]
margin_left = 45.0
margin_top = 3.56763
margin_right = 202.0
margin_bottom = 28.5676
custom_fonts/font = SubResource( 3 )
text = "Show Tutorial:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialCheckBtn" type="CheckBox" parent="Options"]
margin_left = 199.018
margin_top = -2.10004
margin_right = 225.018
margin_bottom = 26.9
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = SubResource( 4 )

[node name="StartLbl" type="Label" parent="Options"]
margin_left = 73.2673
margin_top = 38.1274
margin_right = 206.267
margin_bottom = 57.1274
custom_fonts/font = SubResource( 3 )
text = "Show start:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartCheckBtn" type="CheckBox" parent="Options"]
margin_left = 198.135
margin_top = 28.4158
margin_right = 227.135
margin_bottom = 60.4158
rect_scale = Vector2( 1.25, 1.25 )
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="value_changed" from="MusicVolumeCtrl/MusicSlider" to="MusicVolumeCtrl" method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SoundFXVolumeCtrl/FXSlider" to="SoundFXVolumeCtrl" method="_on_FXSlider_value_changed"]
[connection signal="value_changed" from="DifficultyCtrl/DiffSlider" to="DifficultyCtrl" method="_on_DiffSlider_value_changed"]
[connection signal="pressed" from="Options/TutorialCheckBtn" to="Options" method="_on_TutorialCheckBtn_pressed"]
[connection signal="pressed" from="Options/StartCheckBtn" to="Options" method="_on_StartCheckBtn_pressed"]
